fix: leaderboard overflow

--- a/src/assets/styles/dashboardStyles.css
+++ b/src/assets/styles/dashboardStyles.css
@@ -109,7 +109,7 @@
   overflow-y: auto;
   box-shadow: 0px 4px 16px 0px #0000001F;
   z-index: var(--zMax);
-  animation: fadeInSlideUp 0.3s ease-in;
+  animation: notificationSlideUp 0.5s ease-out;
   padding: 24px;
 }
 
